--- a/Module_05/ex02/Makefile
+++ b/Module_05/ex02/Makefile
@@ -3,7 +3,7 @@ CXX	= c++
 CCFLAGS = -Wall -Wextra -Werror -std=c++98 -g
 
 NAME = bin
-SRC = AForm.cpp Bureaucrat.cpp main.cpp ShrubberyCreationForm.cpp
+SRC = AForm.cpp Bureaucrat.cpp main.cpp presidentialPardonForm.cpp robotomyRequestForm.cpp ShrubberyCreationForm.cpp
 OBJ = $(SRC:.cpp=.o)
 
 all: $(NAME)
@@ -15,6 +15,6 @@ clean:
 	rm -f $(OBJ)
 
 fclean: clean
-	rm -f $(NAME)
+	rm -f $(NAME) *_shrubbery
 
 re: fclean all
